# flutter-xxhash

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: main.dart  pubspec.yaml
ios/: xxhash.podspec
lib/: xxhash.dart
lib/src/: xxh.exception.dart  xxhash.dart  xxhash_bindings.dart  xxhash_bindings.g.dart
lib/src/digest/: digest.dart  digest.sink.dart
lib/src/hash/: hash.dart  hash.sink.dart
lib/src/xxh3/: xxh3.dart  xxh3_128.dart  xxh3_64.dart
lib/src/xxh32/: xxh32.dart
lib/src/xxh64/: xxh64.dart
linux/: CMakeLists.txt
macos/: xxhash.podspec
macos/Classes/: xxhash.c
src/: CMakeLists.txt  w32_toolchain.cmake  xxhash.c  xxhash.h
windows/: CMakeLists.txt
